...
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/headerBox"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAlarmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Alarm Message"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        tools:layout_editor_absoluteX="29dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/alarmTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Select time"
        android:textSize="25sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline28" />

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Select date"
        android:textSize="25sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline27" />

    <TextView
...
        android:layout_marginTop="52dp"
        android:text="No time set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline28" />

    <Button
        android:id="@+id/saveAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Save"
        android:textSize="25sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deleteAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Delete"
        android:textSize="25sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/saveAlarmButton" />

    <Button
        android:id="@+id/backButtonEditAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Back"
        android:textSize="25sp"
        app:backgroundTint="#0e62fe"
...
