...
        app:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/addAlarmViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Alarm"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="Add Alarm"
        android:textSize="25sp"
...
        android:layout_marginTop="52dp"
        android:text="No time set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/alarmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Alarm Message"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
...
