...
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navGraph="@navigation/mobile_navigation" />-->


    <ScrollView
        android:id="@+id/buttonsScrollView"
        android:layout_width="wrap_content"
        android:layout_height="188dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/stroke_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:text="Register"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe"
                tools:text="Register" />

            <Button
                android:id="@+id/alarms_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/alarms"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />
...
